# Panoramix

./: .gitignore  .gitmodules  BugList.txt  CMakeLists.txt  README.md  RoadMap.txt  TodoList.txt
applications/reconstruction/: CMakeLists.txt  main.cpp  mainwin.cpp  mainwin.hpp  mainwin.ui  ogrewidget.cpp  ogrewidget.hpp  plugins.cfg.in  plugins_d.cfg.in  reconstruction.qrc  resources.cfg.in  workthread.cpp  workthread.hpp
executable/: CMakeLists.txt  app_reconstruction.cpp  app_reconstruction_engine.cpp  test_basic.cpp  test_cameras.cpp  test_config.hpp  test_expression.cpp  test_feature.cpp  test_gco.cpp  test_graph.cpp  test_matlab.cpp  test_mesh.cpp  test_meta.cpp  test_optimization.cpp  test_serialization.cpp  test_specific_nets.cpp  test_template_utilities.cpp  test_util.cpp  test_view.cpp  test_vis2d.cpp  test_vis3d.cpp  test_visualizer.cpp
executable/app_gui/: gui.css  gui.qrc  pmainwin.cpp  pmainwin.h  pprojectwidget.h
executable/app_panorec/: main.cpp
executable/linedrawing/: CMakeLists.txt  line_drawing.cpp  line_drawing.hpp  line_drawing_evaluation.cpp  line_drawing_evaluation.hpp  line_drawing_reconstruction.cpp  line_drawing_reconstruction.hpp  line_drawing_tools.cpp  line_drawing_tools.hpp  line_drawing_widget.cpp  line_drawing_widget.hpp  main.cpp  mesh_advanced_util.hpp  routine_reconstruct.cpp  routine_reconstruct_0.cpp  routine_reconstruct_1.cpp  routine_train_energy_weights.cpp  tools.cpp  tools.hpp
executable/mex/: CMakeLists.txt  class_handle.hpp  common.hpp  mexBoundaryFeas.cpp  mexGetBoundaryFeas.cpp  mexGetBoundaryLabels.cpp  mexGetSegmentationGraph.cpp
executable/panolyz/: CMakeLists.txt  main.cpp  routine_NYU2.cpp  routine_YorkUrbanDB.cpp  routine_YorkUrbanDB2.cpp  routine_activepanoindoor.cpp  routine_gc.cpp  routine_normalindoor.cpp  routine_panocontext.cpp  routine_panoindoor.cpp  routine_panoindoor2.cpp  routine_panoindoor3.cpp  routine_panoindoor4.cpp  routine_panoindoor_test.cpp  routine_panoindoor_test2.cpp  routine_prepare.cpp  routine_rloptimizer.cpp  routines.cpp  routines.hpp  score.cpp  score.hpp  tools.cpp  tools.hpp
executable/panolyz_evaluation/: CMakeLists.txt  eval.cpp  eval.hpp  eval_gt.cpp  eval_panocontext.cpp  eval_panoramix.cpp  main.cpp  panoramix.cpp  panoramix.hpp
executable/panolyz_gui/: CMakeLists.txt  configuration.cpp  configuration.hpp  main.cpp  mainwin.cpp  mainwin.hpp  panolyz_gui.qrc  project.cpp  project.hpp  steps.cpp  steps.hpp  stepsdag.cpp  stepsdag.hpp  widgets.cpp  widgets.hpp  workthread.cpp  workthread.hpp
executable/panolyz_interactive/: CMakeLists.txt  main.cpp  setpath.bat.in  viewer.cpp  viewer.hpp
executable/panolyz_label/: CMakeLists.txt  main.cpp  mainwin.cpp  mainwin.hpp  mainwin_panoindoor.cpp  mainwin_panoindoor.hpp
executable/panolyz_linedrawing/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main_direct.cpp  main_drawing_on_image.cpp  main_gui.cpp  main_reconstruct.cpp  routine_edit_image_anno.cpp  routine_reconstruct.cpp  tools.cpp  tools.hpp
executable/panolyz_panorama/: CMakeLists.txt  main.cpp  panoramix.cpp  panoramix.hpp
executable/panolyz_perspective/: CMakeLists.txt  main.cpp
executable/panorama/: main.cpp  main_interactive.cpp  main_label.cpp  main_panorama.cpp  main_perspective.cpp  main_run.cpp  panorama_reconstruction.cpp  panorama_reconstruction.hpp  panoramix.cpp  panoramix.hpp  pi_engine.cpp  pi_engine.hpp  pi_graph_annotation.cpp  pi_graph_annotation_widgets.cpp  pi_graph_cg.cpp  pi_graph_cg.hpp  pi_graph_control.cpp  pi_graph_occlusion.cpp  pi_graph_optimize.cpp  pi_graph_vis.cpp  pi_graph_vis.hpp
executable/scene_analyzer/: CMakeLists.txt  main.cpp
executable/scene_visualizer/: CMakeLists.txt  main.cpp
mex/: CMakeLists.txt  setpath.m.in
mex/boundary_graph/: BoundaryGraph.m  CMakeLists.txt  boundary_graph.cpp  boundary_graph.hpp  mexBoundaryGraph.cpp
mex/mixed_graph/: CMakeLists.txt  MixedGraph.m  mexMixedGraph.cpp  mixed_graph.cpp  mixed_graph.hpp
mex/toolkit/: CMakeLists.txt  Toolkit.m  mexToolkit.cpp
src/: CMakeLists.txt  Panoramix.Core  Panoramix.Vis  config.hpp  config.hpp.cmake  panoramix.hpp  panoramix.unittest.cpp  panoramix.unittest.hpp
src/core/: CMakeLists.txt  algorithms.hpp  any.cpp  any.hpp  basic_types.cpp  basic_types.hpp  basic_types.test.cpp  basic_types_serialization.hpp  cameras.cpp  cameras.hpp  cameras.test.cpp  clock.hpp  cons_graph.hpp  cons_graph.test.cpp  containers.hpp  containers.test.cpp  data_traits.hpp  debug.hpp  decorate.hpp  dummy.cpp  dummy.hpp  errors.hpp  expression.cpp  expression.hpp  expression_ops.hpp  factor_graph.cpp  factor_graph.hpp  factor_graph.test.cpp  failable.hpp  failable.test.cpp  feature.cpp  feature.hpp  feature.test.cpp  feature_visualize.cpp  feature_visualize.hpp  forest.hpp  generic.hpp  generic_topo.hpp  geometry.cpp  geometry.hpp  (+73 more)
src/deriv/: CMakeLists.txt  access.hpp  data_traits.hpp  data_traits_definitions.hpp  data_traits_eigen.hpp  data_traits_floatingpoint.hpp  derivative.hpp  expression.cpp  expression.hpp  expression_ops.hpp  expression_ops_common.hpp  expression_ops_eigen.hpp  expression_ops_floatingpoint.hpp  expression_ops_geometry.hpp  expression_ops_signal.hpp  glue.hpp  mesh.hpp  mesh_maker.hpp  misc.hpp  op_base.hpp  shape.hpp  template_utilities.hpp  traits.hpp
src/experimantal/: solve_connection.cpp  (+1 more)
tests/: CMakeLists.txt  config.cpp  config.hpp  config_test.cpp  feature_test.cpp  main.cpp  mesh_test.cpp  plugins_d.cfg.in  test_basic.cpp  test_cameras.cpp  test_config.cpp  test_config.hpp  test_cons_graph.cpp  test_expression.cpp  test_factor_graph.cpp  test_feature.cpp  test_generic.cpp  test_graph.cpp  test_graphical_model.cpp  test_matlab.cpp  test_mesh.cpp  test_meta.cpp  test_mixed_graph.cpp  test_ml_bp.cpp  test_ogre.cpp  test_optimization.cpp  test_qt.cpp  test_regions_net.cpp  test_rl_graph.cpp  test_sandbox.cpp  test_serialization.cpp  test_template_utilities.cpp  test_util.cpp  test_view.cpp  test_views_net.cpp  test_views_net_calibrate_cameras.cpp  test_views_net_incremented.cpp  test_views_net_outdoor.cpp  test_vis2d.cpp  test_vis3d.cpp  (+1 more)
(+375 files in other folders)
